escrevendo de novo

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
 
      <ol>
-        <li> <font color="green"> disgraça1 </font></li>
-        <li> <font color="purple"> disgraça2 </font></li>
+        <li> <font color="green"> palhaçada1 </font></li>
+        <li> <font color="purple"> pratica2 </font></li>
         <li> <font color="black"> disgraça3 </font></li>
-        <li> <font color="gray"> disgraça4 </font></li>
-        <li> <font color="pink"> disgraça5 </font></li>
+        <li> <font color="gray"> ameaça4 </font></li>
+        <li> <font color="pink"> sem graça5 </font></li>
         <li> <font color="blue"> disgraça6 </font></li>
         <li> <font color="silver"> disgraça7 </font></li>
         <li> <font color="violet"> disgraça8 </font></li>
