--- a/index.html
+++ b/index.html
@@ -6,32 +6,24 @@
     <title>O_MARQUEZINI</title>
 </head>
 <body>
+   <img src="unnamed.jpg">
 
-     <ol>
-        <li> <font color="green"> palhaçada1 </font></li>
-        <li> <font color="purple"> pratica2 </font></li>
-        <li> <font color="black"> disgraça3 </font></li>
-        <li> <font color="gray"> ameaça4 </font></li>
-        <li> <font color="pink"> sem graça5 </font></li>
-        <li> <font color="blue"> disgraça6 </font></li>
-        <li> <font color="silver"> disgraça7 </font></li>
-        <li> <font color="violet"> disgraça8 </font></li>
-        <li> <font color="brown"> disgraça9 </font></li>
-        <li> <font color="red"> disgraça10 </font></li>
-     </ol>
-     <ul>
-<li> <font color="green"> disgraça1 </font></li>
-        <li> <font color="purple"> disgraça2 </font></li>
-        <li> <font color="black"> disgraça3 </font></li>
-        <li> <font color="gray"> disgraça4 </font></li>
-        <li> <font color="pink"> disgraça5 </font></li>
-        <li> <font color="blue"> disgraça6 </font></li>
-        <li> <font color="silver"> disgraça7 </font></li>
-        <li> <font color="violet"> disgraça8 </font></li>
-        <li> <font color="brown"> disgraça9 </font></li>
-        <li> <font color="red"> disgraça10 </font></li>
-     </ul>
+   <h3>RAFAEL MARQUEZINI</h3>
 
+   <h2>sobre min</h2>
+   <p>eu estudo desinvolvimento de sitema no colegio estadual reni c. gamper</p>
+   <p>tenho 15 anos, tenho altismo leve e sou terrivel em lembrar das coisas ou das pessoas que não me intereçam.</p>
+   <p>moro no colegio </p>
+
+   <hr />
+
+
+   <ul>
+      <li>ser bem na media.</li>
+      <li>ter um nome e sobrenome sonoros.</li>
+
+   </ul>
+      
 
 
 
